# sound-quest-demo

./: .env  .gitignore  DEPLOYMENT.md  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: prestart.sh  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1971408adac3_remove_item.py  23d8b1b413b5_add_language_column_to_document.py  268e54b2f5bd_add_tsvector_support.py  3712b66b0ca3_add_document.py  4cbbadd88af6_make_filename_optional.py  53d5b9085aa3_add_aws_transcription.py  97567d02cdfd_add_word.py  a93885e07b1c_update_wrt_initial_orm.py
backend/app/app/: file_store.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: filter.py
backend/app/app/crud/: __init__.py  base.py  crud_document.py
backend/app/app/email-templates/src/: new_account.mjml
backend/app/app/models/: __init__.py  document.py  user.py  word.py
backend/app/app/models/transcript/: aws.py
backend/app/app/schemas/: __init__.py  document.py  word.py
backend/app/app/transcription/: aws.py
backend/soundquest/: .gitlab-ci.yml  README.md  cookiecutter-config-file.yml
backend/soundquest/frontend/: .env  vue.config.js
backend/soundquest/frontend/public/: index.html
backend/soundquest/frontend/src/: App.vue  api.ts  main.ts  router.ts
backend/soundquest/frontend/src/components/: NotificationsManager.vue
backend/soundquest/frontend/src/views/: Login.vue  PasswordRecovery.vue  ResetPassword.vue
frontend/: README.md  package-lock.json  (+2 more)
(+59 files in other folders)
