[tool.poetry]
name = "soundquest"
version = "0.1.0"
description = ""
authors = ["Jonas Schweiger <jonas.schweiger@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
